fix: libera porta 8080 e documenta aviso do Java 25
O app no IntelliJ encerrava porque a API já estava rodando na 8080.
Remove AUTO_SERVER do H2 e adiciona run configuration.

Co-authored-by: Cursor <cursoragent@cursor.com>